--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,13 @@ find_package(catkin REQUIRED COMPONENTS
   pcl_ros
   roscpp
   sensor_msgs
-  std_msgs
+  geometry_msgs
 )
+
+
+
+ 
+
 find_package(PCL 1.3 REQUIRED)
 
 ## System dependencies are found with CMake's conventions
@@ -105,6 +110,21 @@ find_package(PCL 1.3 REQUIRED)
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
+
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(FLANN REQUIRED flann)
+
+link_directories(${FLANN_LIBRARY_DIRS})
+include_directories(${FLANN_INCLUDE_DIRS})
+
+if(FLANN_CFLAGS)
+   add_definitions(${FLANN_CFLAGS})
+ endif(FLANN_CFLAGS)
+
+find_package(HDF5 REQUIRED)
+include_directories(${HDF5_INCLUDE_DIR})
+
+
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ras_group8_camera_pcl
@@ -145,8 +165,11 @@ add_definitions(${PCL_DEFINITIONS})
 
 add_executable(example_voxelgrid src/example_voxelgrid.cpp)
 add_executable(example_planarsegmentation src/example_planarsegmentation.cpp)
-
+add_executable (segmentation src/segmentation.cpp)
 add_executable (outlier_removal src/outlier_removal.cpp)
+add_executable(record src/record.cpp)
+add_executable(recognition src/recognization.cpp)
+add_executable(color_clusters src/color_clusters.cpp)
 #add_executable (cluster_extraction src/cluster_extraction.cpp)
 
 ## Rename C++ executable without prefix
@@ -165,10 +188,24 @@ add_executable (outlier_removal src/outlier_removal.cpp)
 # )
 target_link_libraries(example_voxelgrid ${catkin_LIBRARIES})
 target_link_libraries(example_planarsegmentation ${catkin_LIBRARIES})
-
+target_link_libraries(color_clusters ${catkin_LIBRARIES})
+target_link_libraries (segmentation ${PCL_LIBRARIES})
 target_link_libraries (outlier_removal ${catkin_LIBRARIES})
+target_link_libraries(record ${catkin_LIBRARIES})
+target_link_libraries(recognition ${PCL_LIBRARIES} ${Boost_LIBRARIES} ${FLANN_LIBRARIES} ${HDF5_hdf5_LIBRARY} ${catkin_LIBRARIES})
 #target_link_libraries (cluster_extraction ${catkin_LIBRARIES})
 #target_link_libraries (cluster_extraction ${PCL_LIBRARIES})
+
+
+
+
+ 
+
+
+
+
+
+
 #############
 ## Install ##
 #############
