current status of pcl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,7 +168,7 @@ add_definitions(${PCL_DEFINITIONS})
 
 add_executable(example_voxelgrid src/example_voxelgrid.cpp)
 add_executable(example_planarsegmentation src/example_planarsegmentation.cpp)
-add_executable (segmentation src/segmentation.cpp)
+#add_executable (segmentation src/segmentation.cpp)
 add_executable (outlier_removal src/outlier_removal.cpp)
 add_executable(record src/record.cpp)
 add_executable(recognition src/recognization.cpp)
@@ -176,6 +176,10 @@ add_executable(color_clusters src/color_clusters.cpp)
 add_executable(location_and_color src/location_and_color.cpp)
 add_executable(passthrough_filter src/passthrough_filter.cpp)
 add_executable(remove_floor_and_walls src/remove_floor_and_walls.cpp)
+add_executable(obstacle_classifier src/obstacle_classifier.cpp)
+add_executable(clustering_and_color src/clustering_and_color.cpp)
+
+add_executable(combine src/combine.cpp)
 #add_executable (cluster_extraction src/cluster_extraction.cpp)
 
 ## Rename C++ executable without prefix
@@ -195,14 +199,18 @@ add_executable(remove_floor_and_walls src/remove_floor_and_walls.cpp)
 target_link_libraries(example_voxelgrid ${catkin_LIBRARIES})
 target_link_libraries(example_planarsegmentation ${catkin_LIBRARIES})
 target_link_libraries(color_clusters ${catkin_LIBRARIES})
-target_link_libraries (segmentation ${PCL_LIBRARIES})
+#target_link_libraries (segmentation ${PCL_LIBRARIES})
 target_link_libraries (outlier_removal ${catkin_LIBRARIES})
 target_link_libraries(location_and_color ${catkin_LIBRARIES})
 target_link_libraries(passthrough_filter ${catkin_LIBRARIES})
 target_link_libraries(remove_floor_and_walls ${catkin_LIBRARIES})
-
+target_link_libraries(clustering_and_color ${catkin_LIBRARIES})
+target_link_libraries(obstacle_classifier ${catkin_LIBRARIES})
 target_link_libraries(record ${catkin_LIBRARIES})
 target_link_libraries(recognition ${PCL_LIBRARIES} ${Boost_LIBRARIES} ${FLANN_LIBRARIES} ${HDF5_hdf5_LIBRARY} ${catkin_LIBRARIES})
+
+target_link_libraries(combine ${catkin_LIBRARIES})
+
 #target_link_libraries (cluster_extraction ${catkin_LIBRARIES})
 #target_link_libraries (cluster_extraction ${PCL_LIBRARIES})
 
